--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="container">
-        <h1>Shopping List</h1>
+        <h1 class="title">Shopping List</h1>
         <h2>Get it done today</h2>
         <div class="input-group mb-3">
-            <input id="userinput" class="form-control" type="text" placeholder="enter items">
+            <input id="userinput" class="form-control" type="text" placeholder="enter items" autofocus>
             <div class="input-group-append">
                 <button id="enter" class="btn btn-outline-secondary">Enter</button>
             </div>
